# steiner_tree

./: CMakeLists.txt  README.md  build_and_test.sh  get_testset.sh
src/: CMakeLists.txt  inputparser.cpp  inputparser.h  instance.h  main.cpp  solutionfinder.cpp  solutionfinder.h
